--- a/src/Tasks.css
+++ b/src/Tasks.css
@@ -19,6 +19,19 @@
 }
 
 
+.input_wallet_address{
+    margin-left: 30px;
+    text-align: center;
+    font-size: 14px;
+    color: red;
+    border: none;
+    border-radius: 14px;
+    width: 10%;
+    height: 35px;
+    outline: none;
+}
+
+
 .tasks__div__button{
     width: 10%;
     height: 35px;
@@ -29,8 +42,10 @@
 
 .task__div__icon{
     margin-left: 1%;
-    width: 40px;
-    height: 34px;
+    width: 40px !important;
+    height: 29px !important;
+    background-color: white;
+    border-radius: 7px;
 }
 
 
